--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,13 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Win32-Console-ANSI
-version:      1.00
-version_from: lib/Win32/Console/ANSI.pm
-installdirs:  site
-requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+--- #YAML:1.0
+name:                Win32-Console-ANSI
+version:             1.01
+abstract:            Perl extension to emulate ANSI console on Win32 system.
+license:             ~
+author:              
+    - J-L. Morel <jl_morel@bribes.org>
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
