--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,23 @@
---- #YAML:1.0
-name:               Win32-Console-ANSI
-version:            1.04
-abstract:           Perl extension to emulate ANSI console on Win32 system.
+---
+abstract: 'Perl extension to emulate ANSI console on Win32 system.'
 author:
-    - J-L. Morel <jl_morel@bribes.org>
-license:            unknown
-distribution_type:  module
+  - 'J-L. Morel <jl_morel@bribes.org>'
+build_requires:
+  ExtUtils::MakeMaker: 0
 configure_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Win32::Pipe:     0
-    Win32::Process:  0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.72, CPAN::Meta::Converter version 2.132140'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Win32-Console-ANSI
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Win32::Pipe: 0
+  Win32::Process: 0
+version: 1.05
